--- a/MetafanLunch/templates/index.html
+++ b/MetafanLunch/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fa">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,35 +8,53 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
-  type="text/css" />
+    type="text/css" />
   <style>
     body {
       direction: rtl;
       font-family: Vazirmatn, sans-serif;
     }
+
     .container {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      height: 80vh;
+      margin-top: 10vh;
+      margin-bottom: 10vh;
+      background-color: #d4f1f7;
+      border-radius: 25px;
     }
+
+    /* .container {
+      max-width: 600px;
+      margin: auto;
+      padding: 50px;
+      margin-top: 50px;
+      margin-bottom: 50px;
+      background-color: #d4f1f7;
+      border-radius: 25px;
+    } */
+
     .btn {
       margin: 10px;
     }
   </style>
 </head>
+
 <body>
 
-<div class="container">
-  <h1>خوش آمدید</h1>
-  <div>
-    <a href="/lunch/login" class="btn btn-primary">ورود</a>
-    <a href="/lunch/register" class="btn btn-success">ثبت نام</a>
+  <div class="container">
+    <h1>خوش آمدید</h1>
+    <div>
+      <a href="/lunch/login" class="btn btn-primary">ورود</a>
+      <!-- <a href="/lunch/register" class="btn btn-success">ثبت نام</a> -->
+    </div>
   </div>
-</div>
 
-<!-- Bootstrap Bundle JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap Bundle JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
