--- a/MetafanLunch/templates/index.html
+++ b/MetafanLunch/templates/index.html
@@ -5,6 +5,10 @@
 
 {% block content %}
 {% load static %}
+
+
+{% load pwa %}
+{% progressive_web_app_meta %}
 <div class="container">
   <h1>خوش آمدید</h1>
   <div>
