--- a/MetafanLunch/templates/base.html
+++ b/MetafanLunch/templates/base.html
@@ -61,6 +61,9 @@
                 <li><a href="index.html" title="پیشخوان">پیشخوان متافن</a></li>
             </ul>
         </div>
+        <div>
+            {% block content %}{% endblock content %}
+        </div>
 
     </div>
 </body>
