--- a/MetafanLunch/templates/base.html
+++ b/MetafanLunch/templates/base.html
@@ -26,12 +26,12 @@
         </div>
 
         <ul>
-            <li class="item-li i-dashboard is-active"><a href="index.html">پیشخوان</a></li>
+            <li class="item-li i-dashboard {% if request.resolver_match.url_name == 'home' %}is-active{% endif %}"><a href="{% url 'home' %}">پیشخوان</a></li>
             <li class="item-li i-transactions"><a href="articles.html">ساعت ورود و خروج</a></li>
-            <li class="item-li i-courses "><a href="courses.html">رزرو ناهار</a></li>
-            <li class="item-li i-user__inforamtion"><a href="users.html">گزارش ماهانه</a></li>
-            <li class="item-li i-categories"><a href="categories.html">نظرسنجی فصلی</a></li>
-            <li class="item-li i-slideshow"><a href="slideshow.html">فیش حقوقی</a></li>
+            <li class="item-li i-courses {% if request.resolver_match.url_name == 'reserve_lunch' %}is-active{% endif %}"><a href="{% url 'reserve_lunch' %}">رزرو ناهار</a></li>
+            <li class="item-li i-user__inforamtion {% if request.resolver_match.url_name == 'monthly_report' %}is-active{% endif %}"><a href="{% url 'monthly_report' %}">گزارش ماهانه</a></li>
+            <li class="item-li i-categories {% if request.resolver_match.url_name == 'season_survey' %}is-active{% endif %}"><a href="{% url 'season_survey' %}">نظرسنجی فصلی</a></li>
+            <li class="item-li i-slideshow {% if request.resolver_match.url_name == 'payslip_list' %}is-active{% endif %}"><a href="{% url 'payslip_list' %}">فیش حقوقی</a></li>
             <li class="item-li i-notification__management"><a href="banners.html">پیام ها</a></li>
             <li class="item-li i-users"><a href="user-information.html">اطلاعات کاربری</a></li>
         </ul>
