--- a/MetafanLunch/templates/lunch/reserve_lunch.html
+++ b/MetafanLunch/templates/lunch/reserve_lunch.html
@@ -1,93 +1,44 @@
+{% extends "base.html" %}
+{% block content %}
 {% load persian_numbers %}
 {% load static %}
+<div class="bg-white padding-20" style="margin: 20px;">
 
-<!DOCTYPE html>
-<html lang="fa" dir="rtl">
+    <h2 style="text-align: center;">رزرو ناهار</h2>
+    <p style="text-align: center;">با انتخاب هر روز، ناهار آن روز برای شما رزرو می شود. هر روز تا ساعت ۷ صبح زمان دارید تا رزرو روز بعد را ثبت و یا کنسل نمایید.</p>
+    {% if error %}
+    <div class="alert alert-danger" role="alert">
+        {{ error }}
+    </div>
+    {% endif %}
+    </div>
+<div class="table__box" style="padding: 20px;">
+    <table class="table">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>رزرو ناهار</title>
-    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
-        type="text/css" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        /* Custom styles */
-        /* Custom styles */
-        .date-item {
-            text-align: right;
-            margin-right: 3rem;
-            margin-top: 2rem;
-        }
+        <form method="post" action="{% url 'reserve_lunch' %}">
+            {% csrf_token %}
+        <thead role="rowgroup">
+        <tr role="row" class="title-row">
+            <th>روز</th>
+            <th>تاریخ</th>
+            <th>وضعیت</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr role="row" >
+            <td>120</td>
+            <td>تایید شده</td>
+            <td>70%</td>
+        </tr>
 
-        body {
-            font-family: 'Vazir', sans-serif;
-            direction: rtl;
-            background-color: #f8f9fa;
-            /* light gray background */
-            padding-top: 20px;
-        }
 
-        .container {
-            max-width:600px;
-            margin: auto;
-            padding: 50px;
-            margin-top: 50px;
-            margin-bottom: 50px;
-            background-color: #d4f1f7;
-            border-radius: 25px;
-        }
+        </tbody>
+    </table>
+</div>
+    <div class="bg-white padding-20" style="margin: 20px;">
 
-        h2 {
-            text-align: center;
-            margin-top: 2rem;
-            margin-bottom: 3rem;
-            font-weight: bolder;
-            /* Centering heading */
-        }
-
-        .form-check-input {
-            margin-right: 5px;
-            /* Adjust the space between checkbox and label */
-        }
-
-        .form-check-label {
-            font-size: 16px;
-            /* Increasing font size */
-            margin-right: 2rem;
-            /* Adjust the space between label and checkbox */
-        }
-
-        .btn-primary {
-            width: 100%;
-            display: block;
-            /* Make button full width */
-            margin: 3rem auto 1rem;
-            /* Center button */
-        }
-
-        body {
-            font-family: vazirmatn, sans-serif;
-            direction: rtl;
-        }
-        @media (max-width: 768px) {
-            .container {
-                max-width: 300px;
-                padding: 20px; /* Adjust padding for smaller screens */
-                margin-top: 30px;
-                margin-bottom: 30px;
-            }
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <a href="https://panel.metafan.info"><img src="{% static 'images/metafan-logo.webp' %}" alt="لوگو" style="display: block; margin: auto auto 30px auto; width: 30%;"></a>
-
-        <h2>رزرو ناهار</h2>
-        <p style="margin: 3rem; text-align: right;">با انتخاب هر روز، ناهار آن روز برای شما رزرو می شود. هر روز تا ساعت ۷ صبح زمان دارید تا رزرو روز بعد را ثبت و یا کنسل نمایید.</p>
+        <h2 style="text-align: center;">رزرو ناهار</h2>
+        <p style="text-align: center;">با انتخاب هر روز، ناهار آن روز برای شما رزرو می شود. هر روز تا ساعت ۷ صبح زمان دارید تا رزرو روز بعد را ثبت و یا کنسل نمایید.</p>
         {% if error %}
         <div class="alert alert-danger" role="alert">
             {{ error }}
@@ -114,8 +65,4 @@
             <button type="submit" class="btn btn-primary">ثبت تغییرات</button>
         </form>
     </div>
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-
-</html>
+    {% endblock %}
