--- a/MetafanLunch/templates/surveys/report_form.html
+++ b/MetafanLunch/templates/surveys/report_form.html
@@ -4,7 +4,7 @@
 {% load static %}
 
 {%load crispy_forms_tags %}
-<div style="margin: 50px;">
+<div class="bg-white padding-20" style="margin: 20px;">
     <h2 style="text-align: center;">گزارش ماهانه</h2>
     <p style="text-align: center;">برای ارسال گزارش ماهانه، فرم زیر را تکمیل و ارسال نمایید</p>
     <form method="post">
