--- a/MetafanLunch/templates/base.html
+++ b/MetafanLunch/templates/base.html
@@ -15,7 +15,17 @@
 <body>
     <div class="sidebar__nav border-top border-left  ">
         <span class="bars d-none padding-0-18"></span>
-        <a class="header__logo  d-none" href="https://netcopy.ir"></a>
+        <a class="header__logo  d-none" href="https://panel.metafan.info"></a>
+        {% if user.avatar %}
+        <div class="profile__info border cursor-pointer text-center">
+            <div class="avatar__img"><img src="{{user.avatar.url}}" class="avatar___img">
+                <input type="file" accept="image/*" class="hidden avatar-img__input">
+                <div class="v-dialog__container" style="display: block;"></div>
+                <div class="box__camera default__avatar"></div>
+            </div>
+            <span class="profile__name">{{ request.user.first_name }} {{ request.user.last_name }}، خوش آمدید!</span>
+        </div>
+        {% else %}
         <div class="profile__info border cursor-pointer text-center">
             <div class="avatar__img"><img src="/static/temp/img/pro.jpg" class="avatar___img">
                 <input type="file" accept="image/*" class="hidden avatar-img__input">
@@ -24,7 +34,8 @@
             </div>
             <span class="profile__name">{{ request.user.first_name }} {{ request.user.last_name }}، خوش آمدید!</span>
         </div>
-
+        {% endif %}
+        {% if not user.is_file %}
         <ul>
             <li class="item-li i-dashboard {% if request.resolver_match.url_name == 'home' %}is-active{% endif %}"><a href="{% url 'home' %}">پیشخوان</a></li>
             <li class="item-li i-transactions"><a href="articles.html">ساعت ورود و خروج</a></li>
@@ -32,10 +43,13 @@
             <li class="item-li i-user__inforamtion {% if request.resolver_match.url_name == 'monthly_report' %}is-active{% endif %}"><a href="{% url 'monthly_report' %}">گزارش ماهانه</a></li>
             <li class="item-li i-categories {% if request.resolver_match.url_name == 'season_survey' %}is-active{% endif %}"><a href="{% url 'season_survey' %}">نظرسنجی فصلی</a></li>
             <li class="item-li i-slideshow {% if request.resolver_match.url_name == 'payslip_list' %}is-active{% endif %}"><a href="{% url 'payslip_list' %}">فیش حقوقی</a></li>
-            <li class="item-li i-notification__management"><a href="banners.html">پیام ها</a></li>
-            <li class="item-li i-users"><a href="user-information.html">اطلاعات کاربری</a></li>
+            <li class="item-li i-notification__management {% if request.resolver_match.url_name == 'messages_list' %}is-active{% endif %}"><a href="{% url 'messages_list' %}">پیام ها</a></li>
+            <li class="item-li i-users {% if request.resolver_match.url_name == 'profile_info' %}is-active{% endif %}"><a href="{% url 'profile_info' %}">اطلاعات کاربری</a></li>
         </ul>
-
+        {% else %}
+        <ul>
+            <li class="item-li i-articles {% if request.resolver_match.url_name == 'file_list' %}is-active{% endif %}"><a href="{% url 'file_list' %}">مدیریت فایل ها</a></li>
+        {% endif %}
     </div>
     <div class="content">
         <div class="header d-flex item-center bg-white width-100 border-bottom padding-12-30">
@@ -61,9 +75,10 @@
                 <li><a href="index.html" title="پیشخوان">پیشخوان متافن</a></li>
             </ul>
         </div>
-        <div>
-            {% block content %}{% endblock content %}
-        </div>
+
+        {% block content %}
+        {% endblock content %}
+
 
     </div>
 </body>
