--- a/MetafanLunch/templates/messaging/messages-list.html
+++ b/MetafanLunch/templates/messaging/messages-list.html
@@ -1,104 +1,33 @@
+{% extends "base.html" %}
+{% block content %}
+{% load persian_numbers %}
 {% load static %}
-{% load crispy_forms_tags %}
-<!DOCTYPE html>
-<html lang="fa-IR">
+<div class="bg-white padding-20" style="margin: 20px 20px 0 20px;">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>لیست پیام ها</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'fonts/Vazirmatn-FD-font-face.css' %}">
-    <style>
-        body {
-            font-family: 'Vazirmatn FD';
-            direction: rtl;
-        }
+    <h2 style="text-align: center;">پیام های ارسالی</h2>
+    <p style="text-align: center;">در این بخش می‌توانید پیام‌های ارسال شده را مشاهده نمایید.</p>
 
-        .container {
-            max-width: 600px;
-            padding: 50px 75px;
-            margin-top: 50px;
-            margin-bottom: 50px;
-            background-color: #d4f1f7;
-            border-radius: 25px;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        .btn {
-            text-align: center;
-            width: 100%;
-        }
-
-        .btn-primary {
-            display: block;
-            margin: 1rem auto 1rem;
-        }
-
-        .list-group {
-            text-align: center;
-            padding: 0;
-            margin-top: 20px;
-            border-radius: 20px;
-
-        }
-
-        .list-group-item {
-            display: inline-block;
-            text-align: right;
-            width: auto;
-            background-color: white;
-            border: 0cm;
-            padding: 20px 40px;
-            margin: 10px;
-            border-radius: 20px;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                max-width: 300px;
-                padding: 20px;
-                margin-top: 30px;
-                margin-bottom: 30px;
-            }
-
-            .form-control {
-                width: 100%;
-            }
-
-            textarea {
-                resize: vertical;
-            }
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <a href="https://panel.metafan.info">
-            <img src="{% static 'images/metafan-logo.webp' %}" alt="لوگو" style="display: block; margin: auto auto 30px auto; width: 30%;">
-        </a>
-        <h2 style="text-align: center;">لیست پیام ها</h2>
-        <ul class="list-group">
+</div>
+<div class="table__box" style="padding: 20px;">
+    <table class="table">
+        <thead>
+            <tr class="title-row">
+                <th>عنوان پیام</th> <!-- Simplified header -->
+                <th>متن پیام</th> <!-- Simplified header -->
+                <th>تاریخ ارسال</th> <!-- Simplified header -->
+            </tr>
+        </thead>
+        <tbody>
             {% for message in messages %}
-                <li class="list-group-item">
-                    <h4>
-                        {{message.title}}
-                    </h4>
-                    <p>
-                        {{message.description}}
-                    </p>
-                    <p style="font-size: small; margin: 0;">
-                        {{message.created_at|date:'H:i - Y/m/d'}}
-                    </p>
-                </li>
+            <tr>
+                <td>{{ message.title }}</td> <!-- Display the message as the title -->
+                <td>{{ message.description }}</td> <!-- Display the message as the title -->
+                <td>{{ message.created_at|date:'Y/m/d, H:i'|persian_numbers }}</td>
+                <!-- Display timestamp if available -->
+            </tr>
             {% endfor %}
-        </ul>
-    </div>
-</body>
+        </tbody>
+    </table>
+</div>
 
-</html>
+{% endblock %}
