Refactor base.html: Add font-awesome stylesheet

--- a/MetafanLunch/templates/base.html
+++ b/MetafanLunch/templates/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/static/temp/css/responsive_991.css" media="(max-width:991px)">
     <link rel="stylesheet" href="/static/temp/css/responsive_768.css" media="(max-width:768px)">
     <link rel="stylesheet" href="/static/temp/css/font.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -35,20 +37,22 @@
             <span class="profile__name">{{ request.user.first_name }} {{ request.user.last_name }}، خوش آمدید!</span>
         </div>
         {% endif %}
-        {% if not user.is_file %}
+        {% if user.is_file and user.is_staff%}
         <ul>
             <li class="item-li i-dashboard {% if request.resolver_match.url_name == 'home' %}is-active{% endif %}"><a href="{% url 'home' %}">پیشخوان</a></li>
             <li class="item-li i-transactions"><a href="articles.html">ساعت ورود و خروج</a></li>
             <li class="item-li i-courses {% if request.resolver_match.url_name == 'reserve_lunch' %}is-active{% endif %}"><a href="{% url 'reserve_lunch' %}">رزرو ناهار</a></li>
-            <li class="item-li i-user__inforamtion {% if request.resolver_match.url_name == 'monthly_report' %}is-active{% endif %}"><a href="{% url 'monthly_report' %}">گزارش ماهانه</a></li>
+            <li class="item-li i-user__inforamtion {% if request.resolver_match.url_name == 'monthly_report' or request.resolver_match.url_name == 'last_report' %}is-active{% endif %}"><a href="{% url 'last_report' %}">گزارش ماهانه</a></li>
             <li class="item-li i-categories {% if request.resolver_match.url_name == 'season_survey' %}is-active{% endif %}"><a href="{% url 'season_survey' %}">نظرسنجی فصلی</a></li>
+            <li class="item-li i-articles {% if request.resolver_match.url_name == 'file_list' or request.resolver_match.url_name == 'send_file'%}is-active{% endif %}"><a href="{% url 'file_list' %}">مدیریت فایل ها</a></li>
             <li class="item-li i-slideshow {% if request.resolver_match.url_name == 'payslip_list' %}is-active{% endif %}"><a href="{% url 'payslip_list' %}">فیش حقوقی</a></li>
             <li class="item-li i-notification__management {% if request.resolver_match.url_name == 'messages_list' %}is-active{% endif %}"><a href="{% url 'messages_list' %}">پیام ها</a></li>
             <li class="item-li i-users {% if request.resolver_match.url_name == 'profile_info' %}is-active{% endif %}"><a href="{% url 'profile_info' %}">اطلاعات کاربری</a></li>
         </ul>
-        {% else %}
+        {% elif user.is_file and not user.is_staff %}
         <ul>
-            <li class="item-li i-articles {% if request.resolver_match.url_name == 'file_list' %}is-active{% endif %}"><a href="{% url 'file_list' %}">مدیریت فایل ها</a></li>
+            <li class="item-li i-articles {% if request.resolver_match.url_name == 'file_list' or 'send_file'%}is-active{% endif %}"><a href="{% url 'file_list' %}">مدیریت فایل ها</a></li>
+        </ul>
         {% endif %}
     </div>
     <div class="content">
