--- a/MetafanLunch/templates/surveys/report_form.html
+++ b/MetafanLunch/templates/surveys/report_form.html
@@ -4,7 +4,19 @@
 {% load static %}
 
 {%load crispy_forms_tags %}
-<div class="bg-white padding-20" style="margin: 20px;">
+<div class="main-content font-size-13">
+    <style>
+        .main-content a {
+            color: #000 !important;
+        }
+        </style>
+<div class="tab__box">
+    <div class="tab__items">
+        <a class="tab__item " href="{% url 'last_report' %}">آخرین گزارش ارسال شده</a>
+        <a class="tab__item is-active" href="{% url 'monthly_report' %}">ارسال یک گزارش جدید</a>
+    </div>
+</div>
+<div class="bg-white padding-20">
     <h2 style="text-align: center;">گزارش ماهانه</h2>
     <p style="text-align: center;">برای ارسال گزارش ماهانه، فرم زیر را تکمیل و ارسال نمایید</p>
     <form method="post">
@@ -12,6 +24,7 @@
         {{ form|crispy}}
         <button type="submit" class="btn btn-netcopy_net">ارسال</button>
     </form>
+</div>
 </div>
 
 
