--- a/MetafanLunch/templates/attendance/attendance.html
+++ b/MetafanLunch/templates/attendance/attendance.html
@@ -13,6 +13,8 @@
         <div class="tab__items">
             <a class="tab__item is-active" href="{% url 'attendance' %}">ورود و خروج امروز</a>
             <a class="tab__item" href="{% url 'attendance_list' %}">کارکردهای پیشین</a>
+            <a class="tab__item" href="{% url 'user_requests' %}">درخواست‌های بازبینی</a>
+            <a class="tab__item" href="{% url 'request_attendance' %}">ثبت درخواست جدید</a>
         </div>
     </div>
     <!-- Form with padding and background color -->
