--- a/MetafanLunch/templates/attendance/attendance_edit.html
+++ b/MetafanLunch/templates/attendance/attendance_edit.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 {% load persian_numbers %}
-{% block title %}ساعت ورود و خروج{% endblock %}
+{% block title %}درخواست تغییر ساعت ورود و خروج{% endblock %}
 
 {% block content %}
+
+<link rel="stylesheet" href="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.css">
+<script type="text/javascript" src="https://unpkg.com/@majidh1/jalalidatepicker/dist/jalalidatepicker.min.js"></script>
+<script>
+    jalaliDatepicker.startWatch();
+</script>
+
 <div class="main-content">
     <style>
         .main-content a {
@@ -11,46 +18,66 @@
     </style>
     <div class="tab__box">
         <div class="tab__items">
-            <a class="tab__item " href="{% url 'attendance' %}">ورود و خروج امروز</a>
+            <a class="tab__item" href="{% url 'attendance' %}">ورود و خروج امروز</a>
             <a class="tab__item" href="{% url 'attendance_list' %}">کارکردهای پیشین</a>
-            <a class="tab__item is-active" href="{% url 'attendance_list' %}">درخواست ثبت ساعت روزهای قبل</a>
+            <a class="tab__item" href="{% url 'user_requests' %}">درخواست‌های بازبینی</a>
+            <a class="tab__item is-active" href="{% url 'request_attendance' %}">ثبت درخواست جدید</a>
         </div>
     </div>
+    
     <!-- Form with padding and background color -->
     <form method="POST" class="padding-30 bg-white font-size-14">
+        {% csrf_token %}
         {% for message in messages %}
         <div style="background-color: rgb(198, 255, 198); padding: 10px; border-radius: 5px; margin-bottom: 20px;">{{ message }}</div>
         {% endfor %}
-        {% csrf_token %}
-        <h2 style="text-align: center; padding-bottom: 20px;">ساعت ورود و خروج روز {{ day_name }} {{ today|date:"Y/m/d"|persian_numbers }} </h2>
-        <!-- Check-in Time Field -->
+        
+        <h2 style="text-align: center; padding-bottom: 20px;">درخواست تغییر ساعت ورود و خروج</h2>
+
+        <!-- Requested Check-in Time Field -->
         <div class="row no-gutters border-2 margin-bottom-15" style="text-align: center;">
             <div class="w-50" style="font-size: larger; font-weight: bolder; display: flex; justify-content: center; align-items: center;">
-                ساعت ورود
+                ساعت ورود جدید
             </div>
             <div class="w-50 bg-fafafa padding-20">
-                <input style="display: flex; justify-content: center; align-items: center; margin-bottom: 0px;" type="time" id="checkin" name="checkin" class="text" 
-                       value="{{ check_in }}" 
-                       {% if check_in %} disabled {% endif %} required>
+                <input type="time" id="requested_check_in" name="requested_check_in" class="text" required>
             </div>
         </div>
 
-        <!-- Only show the check-out field if the user has already checked in -->
-        {% if check_in %}
-        <div class="row no-gutters border-2 margin-bottom-15 text-center">
-            <div class="w-50 padding-20" style="font-size: larger; font-weight: bolder; display: flex; justify-content: center; align-items: center;">ساعت خروج</div>
+        <!-- Requested Check-out Time Field -->
+        <div class="row no-gutters border-2 margin-bottom-15" style="text-align: center;">
+            <div class="w-50" style="font-size: larger; font-weight: bolder; display: flex; justify-content: center; align-items: center;">
+                ساعت خروج جدید
+            </div>
             <div class="w-50 bg-fafafa padding-20">
-                <input style="display: flex; justify-content: center; align-items: center; margin-bottom: 0px;" type="time" id="checkout" name="checkout" class="text" 
-                       value="{{ check_out }}" {% if check_out %} disabled {% endif %} required>
+                <input type="time" id="requested_check_out" name="requested_check_out" class="text" required>
+            </div>
+        </div>
+
+        {% if request.resolver_match.url_name == 'request_attendance' %}
+        <!-- Date Field -->
+        <div class="row no-gutters border-2 margin-bottom-15" style="text-align: center;">
+            <div class="w-50" style="font-size: larger; font-weight: bolder; display: flex; justify-content: center; align-items: center;">
+                تاریخ
+            </div>
+            <div class="w-50 bg-fafafa padding-20">
+                <input data-jdp id="date" name="date" class="text" required>
             </div>
         </div>
         {% endif %}
+        <!-- Request Reason Field -->
+        <div class="row no-gutters border-2 margin-bottom-15" style="text-align: center;">
+            <div class="w-50" style="font-size: larger; font-weight: bolder; display: flex; justify-content: center; align-items: center;">
+                دلیل درخواست
+            </div>
+            <div class="w-50 bg-fafafa padding-20">
+                <textarea id="request_reason" name="request_reason" class="text" rows="4" required></textarea>
+            </div>
+        </div>
 
         <!-- Submit Button -->
-        <div class="text-center" {% if check_out %} style="display: none;" {% endif %}>
-            <button class="btn btn-netcopy_net">
-                {% if check_in %}ثبت ساعت خروج{% else %}ثبت ساعت ورود{% endif %}
-            </button>
+        <div class="text-center">
+            <button class="btn btn-netcopy_net">ثبت درخواست تغییر</button>
         </div>
     </form>
 </div>
