--- a/MetafanLunch/templates/attendance/attendance_list.html
+++ b/MetafanLunch/templates/attendance/attendance_list.html
@@ -3,13 +3,19 @@
 {%load persian_numbers%}
 {% block content %}
 <div class="main-content">
+    <style>
+        .main-content a {
+            color: #000 !important;
+        }
+    </style>
     <div class="tab__box">
         <div class="tab__items">
-            <a class="tab__item " href="{% url 'attendance' %}">ورود و خروج امروز</a>
+            <a class="tab__item" href="{% url 'attendance' %}">ورود و خروج امروز</a>
             <a class="tab__item is-active" href="{% url 'attendance_list' %}">کارکردهای پیشین</a>
+            <a class="tab__item" href="{% url 'user_requests' %}">درخواست‌های بازبینی</a>
+            <a class="tab__item" href="{% url 'request_attendance' %}">ثبت درخواست جدید</a>
         </div>
     </div>
-
 
     <div class="table__box">
         <table class="table">
@@ -19,7 +25,7 @@
                     <th>ساعت ورود</th>
                     <th>ساعت خروج</th>
                     <th>کارکرد</th>
-                    <th>عملیات</th>
+                    <th>درخواست ویرایش</th>
                 </tr>
             </thead>
             <tbody>
@@ -32,7 +38,7 @@
                         {{ attendance.duration|persian_numbers }}
                     </td>
                     <td>
-
+                        <a href="{% url 'change_attendance' attendance.id %}" class="item-edit mlg-15" title="درخواست ویرایش" style="color: black;"></a>
                     </td>
                 </tr>
                 {% empty %}
