--- a/MetafanLunch/templates/home.html
+++ b/MetafanLunch/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load persian_numbers %}
+{% load humanize %}
 {% block title %}ساعت ورود و خروج{% endblock %}
 
 {% block content %}
@@ -7,51 +8,42 @@
 <div class="main-content">
     <div class="row no-gutters font-size-13 margin-bottom-10">
         <div class="col-3 padding-20 border-radius-3 bg-white margin-left-10 margin-bottom-10">
-            <p> موجودی حساب فعلی </p>
-            <p>2,500,000 تومان</p>
+            <p style="font-weight: bold;"> درآمد امروز </p>
+            <br>
+            <p>{{ today_price|persian_numbers }} تومان</p>
         </div>
         <div class="col-3 padding-20 border-radius-3 bg-white margin-left-10 margin-bottom-10">
-            <p> کل فروش دوره ها</p>
-            <p>2,500,000 تومان</p>
+            <p style="font-weight: bold;">جمع کارکرد این ماه تا این لحظه</p>
+            <br>
+            <p>{{ this_month_total_time|persian_numbers }} ساعت</p>
         </div>
         <div class="col-3 padding-20 border-radius-3 bg-white margin-left-10 margin-bottom-10">
-            <p> کارمزد کسر شده </p>
-            <p>2,500,000 تومان</p>
+            <p style="font-weight: bold;"> وضعیت ناهار امروز </p>
+            <br>
+            <p>{{ today_lunch|yesno:"رزرو شده ✅,رزرو نشده ❌" }}</p>
         </div>
         <div class="col-3 padding-20 border-radius-3 bg-white margin-bottom-10">
-            <p> درآمد خالص </p>
-            <p>2,500,000 تومان</p>
+            <p style="font-weight: bold;">آخرین فیش حقوقی </p>
+            <br>
+            <p>برج {{ payslips.0.date|date:"m"|persian_numbers }} سال {{ payslips.0.date|date:"Y"|persian_numbers }} </p>
         </div>
     </div>
     <div class="row no-gutters font-size-13 margin-bottom-10">
         <div class="col-3 padding-20 border-radius-3 bg-white margin-left-10 margin-bottom-10">
             <p> درآمد امروز </p>
-            <p>500,000 تومان</p>
+            <p>{{ today_price }} تومان</p>
         </div>
         <div class="col-3 padding-20 border-radius-3 bg-white margin-left-10 margin-bottom-10">
-            <p> درآمد 30 روز گذاشته</p>
-            <p>2,500,000 تومان</p>
+            <p> تراکنش‌های دریافتی امروز</p>
+            <p>{{ received_files_count }} فایل</p>
         </div>
         <div class="col-3 padding-20 border-radius-3 bg-white margin-left-10 margin-bottom-10">
-            <p> تسویه حساب در حال انجام </p>
-            <p>0 تومان </p>
+            <p> گزارش ماه گذشته </p>
+            <p>{{ monthly_report_filled|yesno:"ارسال شده,ارسال نشده" }}</p>
         </div>
-        <div class="col-3 padding-20 border-radius-3 bg-white  margin-bottom-10">
-            <p>تراکنش های موفق امروز (0) تراکنش </p>
-            <p>2,500,000 تومان</p>
-        </div>
-    </div>
-    <div class="row no-gutters font-size-13 margin-bottom-10">
-        <div class="col-8 padding-20 bg-white margin-bottom-10 margin-left-10 border-radius-3">
-            محل قرار گیری نمودار
-        </div>
-        <div class="col-4 info-amount padding-20 bg-white margin-bottom-12-p margin-bottom-10 border-radius-3">
-
-            <p class="title icon-outline-receipt">موجودی قابل تسویه </p>
-            <p class="amount-show color-444">600,000<span> تومان </span></p>
-            <p class="title icon-sync">در حال تسویه</p>
-            <p class="amount-show color-444">0<span> تومان </span></p>
-            <a href="/" class=" all-reconcile-text color-2b4a83">همه تسویه حساب ها</a>
+        <div class="col-3 padding-20 border-radius-3 bg-white margin-bottom-10">
+            <p> آخرین فیش حقوقی </p>
+            <p>{{ payslips.0.amount|default:"0" }} تومان</p>
         </div>
     </div>
     <div class="row bg-white no-gutters font-size-13">
@@ -66,8 +58,8 @@
                     <th>شناسه پرداخت</th>
                     <th>ایمیل پرداخت کننده</th>
                     <th>مبلغ (تومان)</th>
-                    <th>درامد شما</th>
-                    <th>درامد سایت</th>
+                    <th>درآمد شما</th>
+                    <th>درآمد سایت</th>
                     <th>نام دوره</th>
                     <th>تاریخ و ساعت</th>
                     <th>وضعیت</th>
@@ -75,39 +67,32 @@
                 </tr>
                 </thead>
                 <tbody>
+                {% for notification in notifications %}
                 <tr role="row">
-                    <td><a href=""> 1</a></td>
-                    <td><a href="">admin@netcopy.ir</a></td>
-                    <td><a href="">600,000</a></td>
-                    <td><a href="">400,000</a></td>
-                    <td><a href="">400,000</a></td>
-                    <td><a href="">خرید دوره - دوره متخصص php سطح مقدماتی</a></td>
-                    <td><a href=""> 22:14:48 1399/02/23</a></td>
-                    <td><a href="" class="text-success">پرداخت موفق</a></td>
+                    <td><a href="">{{ notification.id }}</a></td>
+                    <td><a href="">{{ notification.email }}</a></td>
+                    <td><a href="">{{ notification.amount }}</a></td>
+                    <td><a href="">{{ notification.user_income }}</a></td>
+                    <td><a href="">{{ notification.site_income }}</a></td>
+                    <td><a href="">{{ notification.course_name }}</a></td>
+                    <td><a href="">{{ notification.created_at|persian_numbers }}</a></td>
+                    <td><a href="" class="{% if notification.is_successful %}text-success{% else %}text-error{% endif %}">
+                        {% if notification.is_successful %}پرداخت موفق{% else %}پرداخت ناموفق{% endif %}
+                    </a></td>
                     <td class="i__oprations">
                         <a href="" class="item-delete margin-left-10" title="حذف"></a>
                         <a href="edit-transaction.html" class="item-edit" title="ویرایش"></a>
                     </td>
                 </tr>
-                <tr role="row">
-                    <td><a href=""> 1</a></td>
-                    <td><a href="">admin@netcopy.ir</a></td>
-                    <td><a href="">600,000</a></td>
-                    <td><a href="">400,000</a></td>
-                    <td><a href="">400,000</a></td>
-                    <td><a href="">خرید دوره - دوره متخصص php سطح مقدماتی</a></td>
-                    <td><a href=""> 22:14:48 1399/02/23</a></td>
-                    <td><a href="" class="text-error">پرداخت ناموفق</a></td>
-                    <td class="i__oprations">
-                        <a href="" class="item-delete margin-left-10" title="حذف"></a>
-                        <a href="edit-transaction.html" class="item-edit" title="ویرایش"></a>
-                    </td>
+                {% empty %}
+                <tr>
+                    <td colspan="9" class="text-center">هیچ تراکنشی یافت نشد.</td>
                 </tr>
+                {% endfor %}
                 </tbody>
             </table>
         </div>
     </div>
 </div>
-
 
 {% endblock %}
